# c-practice

./: .gitignore  CMakeLists.txt
concurrentqueue_demo/: makefile
concurrentqueue_demo/src/: main.cpp
http-parser-demo/: makefile
http-parser-demo/bench/: bench.c
http-parser-demo/src/: http_parser.h  main.c  makefile
libevent_demo/: makefile
libevent_demo/include/: event.h  event2
libevent_demo/src/: main.cpp
llhttp-demo/: makefile
llhttp-demo/bench/: bench.c
llhttp-demo/src/: main.c  makefile
picohttpparser/bench/: bench.c
que_shm_demo/: README.md  makefile
que_shm_demo/lib/: CAS_64bit.h  que_shm.cpp  que_shm.h
que_shm_demo/src/: main.cpp
smart_pointer_perf/: makefile
smart_pointer_perf/src/: main.cpp
thread_entry_demo/src/: main.cpp  registry.h
thread_local_demo/: makefile
thread_local_demo/src/: main.cpp
time_consume/: makefile
time_consume/src/: main.cpp
